syntax = "proto3";

package lovers.srv.file;

service FileServer {
  rpc DownLoadFile(DownLoadFileReq) returns (DownLoadFileResp) {}
  rpc UpLoadFile(UpLoadFileReq) returns (UpLoadFileResp) {}
  rpc DelFile(DelFileReq) returns (DelFileResp) {}
}

message FileRespStatus {
  string FileRespMsg  = 1; //返回信息
  string FileRespCode = 2; //返回状态码
}

message DownLoadFileReq {
  string UserID          = 1;
  string DownLoadFileUrl = 2;

}

message  DownLoadFileResp {
  // @inject_tag: form:"UserID"
  string UserID             = 1;
  bytes FileBinData         = 2;
  string DownLoadFileRet    = 3;
  string FileSha            = 4;
  FileRespStatus RespStatus = 5;
}

message  UpLoadFileReq {
  string  UserID       = 1;
  string  FileInModule = 2; //属于哪个模块的文件
  string  FileType     = 3; //image, txt...
  string  FileName     = 4;
  string  FileSha1     = 5;
  int64   FileSize     = 6;
  bytes   FileBinData  = 7;
}

message UpLoadFileResp {
  string UpLoadFileUrl      = 1;
  string UpLoadFileRet      = 2;
  string FileSha1           = 3;
  string UserID             = 4;
  FileRespStatus RespStatus = 5;
}

message  DelFileReq {
  string UserID     = 1;
  string FileUrl    = 2;
}

message DelFileResp {
  string UserID             = 1;
  string DelFileRet         = 2;
  FileRespStatus RespStatus = 3;

}
